fixes header overflow on listing page

--- a/src/pages/display/style.less
+++ b/src/pages/display/style.less
@@ -46,6 +46,7 @@
       overflow: clip;
       -webkit-line-clamp: 3;
       -webkit-box-orient: vertical;
+      word-wrap: break-word;
 
       @media (max-width: 768px) {
         -webkit-line-clamp: 10;
